Implement get for user
